--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,6 @@ main:
   - title: "Teaching"
     url: /teaching/    
          
-  - title: "Posts"
+  - title: "Exercises"
     url: /year-archive/
         
