--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,6 @@ main:
   - title: "Teaching"
     url: /teaching/    
          
-  - title: "Exercises"
-    url: /year-archive/
+#  - title: "Exercises"
+#    url: /year-archive/
         
