--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
   #  url: /publications/
     
   - title: "Teaching"
-    url: /teachingexp/    
+    url: /teaching/    
          
 #  - title: "Exercises"
 #    url: /year-archive/
