--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "SUNY Albany"
   employer         :
   pubmed           : 
-  googlescholar    : 
+  googlescholar    : "https://scholar.google.com/citations?user=aIAEMiEAAAAJ&hl=en&oi=ao"
   email            : jbyeon2@albany.edu
   researchgate     : 
   uri              :
